--- a/style.css
+++ b/style.css
@@ -1,100 +1,200 @@
 @charset "utf-8";
-body{
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: #E9E6C3;
-}
 @font-face {
-    font-family:'droid';
+    font-family:'android';
     src: url('idroid.otf') format(opentype);
     font-weight: normal;
     font-style: normal;
+}
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+
+:root{
+    --cor0: #c5ebd6;
+    --cor1: #83e1ad;
+    --cor2: #3ddc84;
+    --cor3: #2fa866;
+    --cor4: #1a5c37;
+    --cor5: #063d1e;
+
+    --fonte-padrao:Arial, Helvetica, sans-serif;
+    --fonte-destaque:'Bebas Neue', 'cursive';
+    --fonte-android: 'android';  
+}
+
+*{
+    margin: 0px;
+    pad: 0px;
+}
+
+
+
+body{
+    background-color: var(--cor0);
+    font-family: var(--fonte-padrao);
+}
+
+a.externo::after {
+    content: \00A0\1F517;
+}
+
+header{
+    background-image: linear-gradient(to bottom, var(--cor3), var(--cor5));
+    min-height: 150px;
+    padding-top: 40px;
+    text-align: center;
+}
+
+header>h1{
+    color: white;
+    font-family: var(--fonte-destaque);
+    margin-bottom: 20px;
+    font-size: 3em;
+    text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.465);
+    font-weight: normal;
+    }
+
+header>p{
+    color: white;
+    font-family: var(--fonte-padrao);
+    font-size: 1.2em;
+    max-width: 500px;
+    margin: auto;
+    padding-right: 10px;
+    padding-left: 10px;
+    text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.465);
+    margin-bottom: 5px;
     
 }
-header{
-    background-image: linear-gradient(to bottom, rgb(45, 164, 99), rgb(2, 59, 26));
-    color: white;
-    text-align: center;
-    height: 125px;
-    padding: 15px;
-    margin: 0px;
-    font-family: 'droid';
-}
-h1{
-    margin: 0px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
-nav {
+
+nav{
+    background-color: var(--cor5);
     text-align: left;
-    padding: 25px;
+    padding: 10px;
+    text-shadow: 0px 7px 7px rgba(0, 0, 0, 0.465);
     
 }
 nav>a{
+    color: var(--cor0);
+    padding: 10px;
     text-decoration: none;
-    color: white;
-    text-shadow: 1px 1px 0px #6e6e6e77;
-    margin-right: 30px;
+    font-weight: bold;
+    border-radius: 5px;
+    transition-duration: 0.5s;
 }
-nav>a:hover{
-    background-color: rgb(29, 161, 19);
 
+nav>a:hover{
+    background-color: var(--cor3);
+    color: var(--cor5);
+    
 }
 
 main{
     background-color: white;
-    box-shadow: 5px 5px 15px #00000047;
-    width: 850px;
-    padding: 10px;
-    margin: auto;
+    min-width: 300px;
+    max-width: 1000px;
     text-align: justify;
+    margin: auto;
+    margin-bottom: 30px;
+    padding: 25px;
+    box-shadow: 0px 0px 10px black;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
-h2{
-    color: rgb(2, 59, 26);
-    font-family: 'idroid';
+
+main h1{
+    color: var(--cor5);
+    font-family: var(--fonte-android);
 }
-h3{
-    background-image: linear-gradient(to right, #8EE8B2, #ddf3e6);
-    color: rgb(10, 138, 63);
-    font-family: 'droid', 'Times New Roman', Times, serif;
-    font-weight: normal;
+
+main h2{
+    font-family: var(--fonte-android);
+    background-image: linear-gradient(to right, var(--cor1), transparent);
+    color: var(--cor4);
+    font-size: 1.3em;
+    text-indent: 8px;
 }
-picture{
-    margin-left: 25px;
+
+main p{
+    margin: 15px 0px;
+    text-align: justify;
+    text-indent: 30px;
+    line-height: 2em;
+    font-size: 1em;
+
 }
-#bug{
-    margin-left: 266px;
-}
-#video{
-    background-color: rgb(2, 59, 26);
-}
-#play{
-    margin-left: 145px;
-}
-#ultimo{
-    background-color: #81E2AB;
-    border-radius: 10px;
+
+main strong{
+    color: var(--cor4);
+    font-weight: bold;
     
 }
-h4{
-    background-color: #175C34;
-    color: white;
+
+main a{
+    text-decoration: none;
+    font-weight: bold;
+    background-color: var(--cor1);
+    padding: 2px, 6px;
+    color: var(--cor5);
+}
+
+main a:hover{
+    text-decoration: underline;
+    color: var(--cor4);
+}
+
+main img{
+    width: 100%;
+}
+main img.pq{
+    max-width: 350px;
+    display: block;
+    margin: auto;
+}
+
+aside{
+    background-color: var(--cor1);
     padding: 10px;
-    border-radius: 10px  10px 0px 0px;;
+    border-radius: 10px;
+    box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.349);
 }
-div {
-        display: inline-block;
-        border: 10px;
-        text-align: left;
-        height: 130px;
-        width: 200px;
+
+aside>h3{
+    background-color: var(--cor4);
+    color: white;
+    padding: -10px -10px 0px -10px;
+    border-radius: 10px 10px 0px 0px;
 }
-#d1{
-    margin-left: 10px;
+
+aside>ul{
+    list-style-type: '\2714\00a0';
+    list-style-position: inside;
+    columns: 2;
 }
-#d2{
-    margin-left: 200px;
+
+div.video{
+    background-color: var(--cor5);
+    margin: 0px -20px 30px -20px;
+    padding: 20px;
+    padding-bottom: 57.5%;
+    position: relative;
 }
+
+div.video>iframe{
+    position: absolute;
+    top: 5%;
+    left: 5%;
+    width: 90%;
+    height: 90%;
+}
+
 footer{
-    background-color:rgb(2, 59, 26) ;
+    background-color: var(--cor5);
     color: white;
     text-align: center;
+    font-size: 0.8em;
+    padding: 5px;
+}
+
+footer a:hover{
+    text-decoration: underline;
+    color: var(--cor1);
 }
